# core

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/primitives/: event_bus.doctree  ring_buffer.doctree  ring_buffer_pow2.doctree  slog.doctree
.github/workflows/: build_and_docs.yml
_sources/: index.rst.txt
_sources/primitives/: event_bus.rst.txt  ring_buffer.rst.txt
documentation/doxygen/: Doxyfile
documentation/sphinx/source/: conf.py
documentation/sphinx/source/primitives/: ring_buffer_pow2.rst  slog.rst
examples/: ring_buffer_example.c  ring_buffer_pow2_example.c
include/osusat/: event_bus.h  ring_buffer.h  ring_buffer_pow2.h  slog.h
primitives/: event_bus.html  ring_buffer.html  ring_buffer_pow2.html  slog.html
src/: event_bus.c  ring_buffer.c  ring_buffer_pow2.c  slog.c
tests/: test_ring_buffer.c  test_ring_buffer_pow2.c  test_slog.c
